# amazing

./: .flake8  .gitignore  Makefile  README.md  a_maze_ing.py  cell_state.py  color.py  config.py  config.txt  direction.py  example.py  grid.py  maze.py  mazegen-1.0.0-py3-none-any.whl  pyproject.toml  read_config.py  ruff.toml  state.py  statemachine.py  test_closed_walls.py  test_solver.py  tk_function.py
mazegen/: animation.py  ansi_writer.py  cell.py  cell_coordinate.py  cell_marking.py  cell_state.py  cell_value.py  color.py  direction.py  grid.py  grid_animation.py  maze_generator.py  wall_state.py
mazegen/generators/: __init__.py  base.py  basic.py  dfs.py  imperfect.py
mazegen/render/: ansi_writer.py  ascii_renderer.py  base.py  config.py
mazegen/solvers/: a_star.py  base.py  bfs.py  dfs.py
src/: color.py  config.py  statemachine.py
src/mazegen/: ansi_writer.py  cell.py  cell_marking.py  cell_state.py  cell_value.py  grid.py  maze_generator.py
src/mazegen/generators/: base.py  basic.py  dfs.py  imperfect.py
src/mazegen/render/: ascii_renderer.py  base.py  config.py
src/mazegen/solvers/: __init__.py  a_star.py  base.py  bfs.py  dfs.py
src/tests/: test_closed_walls.py  test_solver.py
