[project]
name = "A-Maze-ing"
version = "0.1.0"
description = "Generates and solves a perfect maze."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "flake8>=7.3.0",
  "mypy>=1.19.1",
  "numpy>=2.4.3",
  "ruff>=0.15.5",
  "ty>=0.0.21",
]

[tool.ruff]
src = ["src"]

line-length = 79
preview = true

# https://docs.astral.sh/ruff/settings/#format
[tool.ruff.format]
docstring-code-format = true

# https://docs.astral.sh/ruff/settings/#lint
[tool.ruff.lint]
select = [
  "I",   # isort
  "E",   # pycodestyle
  "DOC", # pydoclint
  "D",   # pydocstyle
  "F",   # Pyflakes
  "PL",  # Pylint
  "UP",  # pyupgrade
  "RUF", # Ruff-specific rules

  "ANN", # flake8-annotations
  "S",   # flake8-bandit
  "BLE", # flake8-blind-except
  "FBT", # flake8-boolean-trap
  "B",   # flake8-bugbear
  "A",   # flake8-builtins
  "COM", # flake8-commas
  "C4",  # flake8-comprehensions
  "EM",  # flake8-errmsg
  "EXE", # flake8-executable
  "FIX", # flake8-fixme
  "ISC", # flake8-implicit-str-concat
  "ICN", # flake8-import-conventions
  "LOG", # flake8-logging
  "G",   # flake8-logging-format
  "PT",  # flake8-pytest-style
  "Q",   # flake8-quotes
  "RSE", # flake8-raise
  "RET", # flake8-return
  "SLF", # flake8-self
  "SIM", # flake8-simplify
  "TID", # flake8-tidy-imports
  "TD",  # flake8-todos
  "TC",  # flake8-type-checking
  "ARG", # flake8-unused-arguments
]
ignore = [
  # "D203", # incorrect-blank-line-before-class
  "D211", # no-blank-line-before-class
  "D212", # multi-line-summary-first-line
  # "D213", # multi-line-summary-second-line
]
